Fix overflow for unit dropdown

--- a/public/toolkit/styles/molecules/_dropdowns.scss
+++ b/public/toolkit/styles/molecules/_dropdowns.scss
@@ -153,3 +153,7 @@
 .unit-dropdown__control {
   border: none !important;
 }
+
+.unit-dropdown__menu-list {
+  overflow-x: hidden !important;
+}
